--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ captures/
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/assetWizardSettings.xml
+.idea/misc.xml
 .idea/dictionaries
 .idea/libraries
 .idea/caches
