--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,11 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    // ... Navigation Component
+    // ... Architecture Components
     implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'android.arch.lifecycle:viewmodel:1.1.1'
 
     // ... FireBase
     implementation 'com.google.firebase:firebase-auth:17.0.0'
