--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,11 +58,14 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:17.0.0'
     implementation 'com.google.firebase:firebase-database:17.0.0'
     implementation 'com.google.firebase:firebase-storage:17.0.0'
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
 
-    // ... Timber
+    // ... Timber (https://github.com/JakeWharton/timber)
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
-    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+    // ... Circular ImageView (https://github.com/hdodenhof/CircleImageView)
+    implementation 'de.hdodenhof:circleimageview:3.0.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
