--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,10 @@ dependencies {
     // ... Circular ImageView (https://github.com/hdodenhof/CircleImageView)
     implementation 'de.hdodenhof:circleimageview:3.0.0'
 
+    // ... Glide (https://github.com/bumptech/glide)
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
