--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,10 +55,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.0.0'
 
     // ... FireBase
-    implementation 'com.google.firebase:firebase-auth:17.0.0'
-    implementation 'com.google.firebase:firebase-database:17.0.0'
-    implementation 'com.google.firebase:firebase-storage:17.0.0'
-    implementation 'com.google.firebase:firebase-messaging:18.0.0'
+    implementation 'com.google.firebase:firebase-auth:18.0.0'
+    implementation 'com.google.firebase:firebase-database:18.0.0'
+    implementation 'com.google.firebase:firebase-storage:18.0.0'
+    implementation 'com.google.firebase:firebase-messaging:19.0.0'
 
     // ... Timber (https://github.com/JakeWharton/timber)
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -69,6 +69,9 @@ dependencies {
     // ... Glide (https://github.com/bumptech/glide)
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    // ... DotsLoader (https://github.com/agrawalsuneet/DotLoadersPack-Android)
+    implementation 'com.agrawalsuneet.androidlibs:dotsloader:1.4.1'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
